chore: test to upload with tailwind

--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -123,10 +123,11 @@
 
         {%- endif -%}
 
-
-        {%- if shop.phone -%}
-          <p>{{ shop.phone }}</p>
-        {%- endif -%}
+        <div class="flex col-span-full bg-black">
+          {%- if shop.phone -%}
+            <p>{{ shop.phone }}</p>
+          {%- endif -%}
+        </div>
 
 
       </div>
