--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -19,14 +19,19 @@
 
 {%- endstyle -%}
 
-<div class="color-{{ section.settings.color_scheme }} gradient">
-  <div class="contact contact-form__wrapper page-width page-width--narrow section-{{ section.id }}-padding">
-    <div class="left">
-      {%- if section.settings.heading != blank -%}
-        <h2 class="title title-wrapper--no-top-margin {{ section.settings.heading_size }}">{{ section.settings.heading | escape }}</h2>
-      {%- else -%}
-        <h2 class="visually-hidden">{{ 'templates.contact.form.title' | t }}</h2>
-      {%- endif -%}
+<div class="color-{{ section.settings.color_scheme }} container mx-auto px-8">
+  {%- if section.settings.heading != blank -%}
+    <h2 class="text-heading page-title {{ section.settings.heading_size }} {% if section.settings.subheading != blank %}mb-14{% endif %}">{{ section.settings.heading | escape }}</h2>
+  {%- else -%}
+    <h2 class="visually-hidden">{{ 'templates.contact.form.title' | t }}</h2>
+  {% endif %}
+  {%- if section.settings.subheading != blank -%}
+    <h2 class="color-logo font-bold mb-20 {{ section.settings.subheading_size }}">{{ section.settings.subheading | escape }}</h2>
+
+  {%- endif -%}
+  <div class="contact contact-form__wrapper section-{{ section.id }}-padding flex flex-col lg:flex-row">
+    <div class="left-section flex-1 lg:mr-10">
+
 
       {%- form 'contact', id: 'ContactForm', class: 'isolate' -%}
         {%- if form.posted_successfully? -%}
@@ -47,18 +52,18 @@
           </ul>
         {%- endif -%}
         <div class="contact__fields">
-          <div class="field">
+          <div class="field mb-6">
             <input class="field__input" autocomplete="name" type="text" id="ContactForm-name" name="contact[{{ 'templates.contact.form.name' | t }}]" value="{% if form.name %}{{ form.name }}{% elsif customer %}{{ customer.name }}{% endif %}" placeholder="{{ 'templates.contact.form.name' | t }}">
             <label class="field__label" for="ContactForm-name">{{ 'templates.contact.form.name' | t }}</label>
           </div>
 
-          <div class="field">
+          <div class="field mb-6">
             <input type="tel" id="ContactForm-phone" class="field__input" autocomplete="tel" name="contact[{{ 'templates.contact.form.phone' | t }}]" pattern="[0-9\-]*" value="{% if form.phone %}{{ form.phone }}{% elsif customer %}{{ customer.phone }}{% endif %}" placeholder="{{ 'templates.contact.form.phone' | t }}">
             <label class="field__label" for="ContactForm-phone">{{ 'templates.contact.form.phone' | t }}</label>
           </div>
 
         </div>
-        <div class="field field--with-error">
+        <div class="field mb-6 field--with-error">
           <input autocomplete="email" type="email" id="ContactForm-email" class="field__input" name="contact[email]" spellcheck="false" autocapitalize="off" value="{% if form.email %}{{ form.email }}{% elsif customer %}{{ customer.email }}{% endif %}" aria-required="true" {% if form.errors contains 'email' %} aria-invalid="true" aria-describedby="ContactForm-email-error" {% endif %} placeholder="{{ 'templates.contact.form.email' | t }}">
           <label class="field__label" for="ContactForm-email">{{ 'templates.contact.form.email' | t }}
             <span aria-hidden="true">*</span>
@@ -72,7 +77,7 @@
           {%- endif -%}
         </div>
 
-        <div class="field">
+        <div class="field mb-6 lg:mb-0">
           <textarea rows="10" id="ContactForm-body" class="text-area field__input" name="contact[{{ 'templates.contact.form.message' | t }}]" placeholder="{{ 'templates.contact.form.message' | t }}" {% if form.errors contains 'message' %} aria-invalid="true" aria-describedby="ContactForm-message-error" {% endif %}>
             {{- form.body -}}
           </textarea>
@@ -87,25 +92,19 @@
 
         </div>
 
-        <div>
-          <span class="title color-logo title-wrapper--no-top-margin">{{ section.settings.mandatory_field_text | escape }}</span>
-        </div>
-        <div class="contact__button">
-          <button class="button background-logo" type="submit">
-            {{ 'templates.contact.form.send' | t }}
-          </button>
-        </div>
-      {%- endform -%}
-    </div>
-
-    <div class="right">
-      <div class="contact__block">
+      </div>
+      <div class="right-section flex-1 text-center py-6 lg:py-20 flex justify-between flex-col">
         {%- if section.settings.write_us != blank -%}
-          <h2 class="title color-logo title-wrapper--no-top-margin {{ section.settings.write_us }}">{{ section.settings.write_us | escape }}</h2>
+          <h3 class="font-bold main-yellow mb-4 lg:mb-0">{{ section.settings.write_us | escape }}</h3>
         {%- endif -%}
 
+
+        <p class="color-logo mb-4 lg:mb-0">
+          {{ shop.name }}
+        </p>
+
         {%- if shop.address.street -%}
-          <p>
+          <p class="color-logo mb-4 lg:mb-0">
             {{ shop.address.street }}
             {%- if shop.address.street2 -%}
               {{ shop.address.street2 }}
@@ -114,7 +113,7 @@
         {%- endif -%}
 
         {%- if shop.address.zip -%}
-          <p>
+          <p class="color-logo mb-4 lg:mb-0">
             {{ shop.address.zip }}
             {%- if shop.address.city -%}
               {{ shop.address.city }}
@@ -123,17 +122,25 @@
 
         {%- endif -%}
 
-        <div class="flex col-span-full bg-black">
-          {%- if shop.phone -%}
-            <p>{{ shop.phone }}</p>
-          {%- endif -%}
-        </div>
+        {%- if shop.phone -%}
+          <p class="color-logo">{{ shop.phone }}</p>
+        {%- endif -%}
 
 
       </div>
+
     </div>
-  </div>
-  <div></div>
+    <div>
+      <div class="mt-5">
+        <span class="title color-logo title-wrapper--no-top-margin">{{ section.settings.mandatory_field_text | escape }}</span>
+      </div>
+      <div class="contact__button my-8">
+        <button class="button background-logo" type="submit">
+          {{ 'templates.contact.form.send' | t }}
+        </button>
+      </div>
+    </div>
+  {%- endform -%}
 </div>
 
 {% schema %}
@@ -145,13 +152,21 @@
     {
       "type": "text",
       "id": "heading",
-      "default": "Contact form",
-      "label": "Heading"
+      "default": "Nous contacter",
+      "label": "Titre de la page"
     },
     {
       "type": "select",
       "id": "heading_size",
       "options": [
+        {
+          "value": "h4",
+          "label": "Très très petit (h4)"
+        },
+        {
+          "value": "h3",
+          "label": "Très petit (h3)"
+        },
         {
           "value": "h2",
           "label": "t:sections.all.heading_size.options__1.label"
@@ -167,6 +182,40 @@
       ],
       "default": "h1",
       "label": "t:sections.all.heading_size.label"
+    },
+    {
+      "type": "text",
+      "id": "subheading",
+      "default": "Envie de nous écrire ou de nous soumettre une idée ?",
+      "label": "Sous titre de la page"
+    },
+    {
+      "type": "select",
+      "id": "subheading_size",
+      "options": [
+        {
+          "value": "h4",
+          "label": "Très très petit (h4)"
+        },
+        {
+          "value": "h3",
+          "label": "Très petit (h3)"
+        },
+        {
+          "value": "h2",
+          "label": "t:sections.all.subheading_size.options__1.label"
+        },
+        {
+          "value": "h1",
+          "label": "t:sections.all.subheading_size.options__2.label"
+        },
+        {
+          "value": "h0",
+          "label": "t:sections.all.subheading_size.options__3.label"
+        }
+      ],
+      "default": "h1",
+      "label": "t:sections.all.subheading_size.label"
     },
     {
       "type": "select",
