--- a/sections/main-page.liquid
+++ b/sections/main-page.liquid
@@ -5,23 +5,25 @@
 <noscript>{{ 'component-rte.css' | asset_url | stylesheet_tag }}</noscript>
 
 {%- style -%}
-  .section-{{ section.id }}-padding {
-    padding-top: {{ section.settings.padding_top | times: 0.75 | round: 0 }}px;
-    padding-bottom: {{ section.settings.padding_bottom | times: 0.75 | round: 0 }}px;
-  }
+.section-{{ section.id }}-padding {
+  padding-top: {{ section.settings.padding_top | times: 0.75 | round: 0 }}px;
+  padding-bottom: {{ section.settings.padding_bottom | times: 0.75 | round: 0 }}px;
+}
 
-  @media screen and (min-width: 750px) {
-    .section-{{ section.id }}-padding {
-      padding-top: {{ section.settings.padding_top }}px;
-      padding-bottom: {{ section.settings.padding_bottom }}px;
-    }
+@media screen and(min-width: 750px) {
+  .section-{{ section.id }}-padding {
+    padding-top: {{ section.settings.padding_top }}px;
+    padding-bottom: {{ section.settings.padding_bottom }}px;
   }
+}
 {%- endstyle -%}
 
 <div class="page-width page-width--narrow section-{{ section.id }}-padding">
-  <h1 class="main-page-title page-title h0">
-    {{ page.title | escape }}
-  </h1>
+  {%- if section.settings.page_title == "yes" -%}
+    <h1 class="main-page-title page-title h0">
+      {{ page.title | escape }}
+    </h1>
+  {% endif %}
   <div class="rte">
     {{ page.content }}
   </div>
@@ -33,6 +35,26 @@
   "tag": "section",
   "class": "section",
   "settings": [
+    {
+      "type": "header",
+      "content": "Afficher le titre de la page"
+    },
+    {
+      "type": "radio",
+      "id": "page_title",
+      "label": "Titre de la page",
+      "options": [
+        {
+          "value": "yes",
+          "label": "Oui"
+        },
+        {
+          "value": "no",
+          "label": "Non"
+        }
+      ],
+      "default": "yes"
+    },
     {
       "type": "header",
       "content": "t:sections.all.padding.section_padding_heading"
