--- a/assets/base.css
+++ b/assets/base.css
@@ -1665,7 +1665,7 @@ details[open] > .share-button__fallback {
   -webkit-appearance: none;
   appearance: none;
   background-color: rgb(var(--color-background));
-  color: rgb(var(--color-foreground));
+  /* color: rgb(var(--color-foreground)); */
   font-size: 1.6rem;
   width: 100%;
   box-sizing: border-box;
@@ -1889,7 +1889,7 @@ details[open] > .share-button__fallback {
 /* Text area */
 
 .text-area {
-  font-family: var(--font-body-family);
+  /* font-family: var(--font-body-family); */
   font-style: var(--font-body-style);
   font-weight: var(--font-body-weight);
   min-height: 10rem;
