--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -53,18 +53,18 @@
         {%- endif -%}
         <div class="contact__fields">
           <div class="field mb-6">
-            <input class="field__input" autocomplete="name" type="text" id="ContactForm-name" name="contact[{{ 'templates.contact.form.name' | t }}]" value="{% if form.name %}{{ form.name }}{% elsif customer %}{{ customer.name }}{% endif %}" placeholder="{{ 'templates.contact.form.name' | t }}">
+            <input class="field__input text-default" autocomplete="name" type="text" id="ContactForm-name" name="contact[{{ 'templates.contact.form.name' | t }}]" value="{% if form.name %}{{ form.name }}{% elsif customer %}{{ customer.name }}{% endif %}" placeholder="{{ 'templates.contact.form.name' | t }}">
             <label class="field__label" for="ContactForm-name">{{ 'templates.contact.form.name' | t }}</label>
           </div>
 
           <div class="field mb-6">
-            <input type="tel" id="ContactForm-phone" class="field__input" autocomplete="tel" name="contact[{{ 'templates.contact.form.phone' | t }}]" pattern="[0-9\-]*" value="{% if form.phone %}{{ form.phone }}{% elsif customer %}{{ customer.phone }}{% endif %}" placeholder="{{ 'templates.contact.form.phone' | t }}">
+            <input type="tel" id="ContactForm-phone" class="field__input text-default" autocomplete="tel" name="contact[{{ 'templates.contact.form.phone' | t }}]" pattern="[0-9\-]*" value="{% if form.phone %}{{ form.phone }}{% elsif customer %}{{ customer.phone }}{% endif %}" placeholder="{{ 'templates.contact.form.phone' | t }}">
             <label class="field__label" for="ContactForm-phone">{{ 'templates.contact.form.phone' | t }}</label>
           </div>
 
         </div>
         <div class="field mb-6 field--with-error">
-          <input autocomplete="email" type="email" id="ContactForm-email" class="field__input" name="contact[email]" spellcheck="false" autocapitalize="off" value="{% if form.email %}{{ form.email }}{% elsif customer %}{{ customer.email }}{% endif %}" aria-required="true" {% if form.errors contains 'email' %} aria-invalid="true" aria-describedby="ContactForm-email-error" {% endif %} placeholder="{{ 'templates.contact.form.email' | t }}">
+          <input autocomplete="email" type="email" id="ContactForm-email" class="field__input text-default" name="contact[email]" spellcheck="false" autocapitalize="off" value="{% if form.email %}{{ form.email }}{% elsif customer %}{{ customer.email }}{% endif %}" aria-required="true" {% if form.errors contains 'email' %} aria-invalid="true" aria-describedby="ContactForm-email-error" {% endif %} placeholder="{{ 'templates.contact.form.email' | t }}">
           <label class="field__label" for="ContactForm-email">{{ 'templates.contact.form.email' | t }}
             <span aria-hidden="true">*</span>
           </label>
@@ -78,7 +78,7 @@
         </div>
 
         <div class="field mb-6 lg:mb-0">
-          <textarea rows="10" id="ContactForm-body" class="text-area field__input" name="contact[{{ 'templates.contact.form.message' | t }}]" placeholder="{{ 'templates.contact.form.message' | t }}" {% if form.errors contains 'message' %} aria-invalid="true" aria-describedby="ContactForm-message-error" {% endif %}>
+          <textarea rows="10" id="ContactForm-body" class="text-area field__input text-default" name="contact[{{ 'templates.contact.form.message' | t }}]" placeholder="{{ 'templates.contact.form.message' | t }}" {% if form.errors contains 'message' %} aria-invalid="true" aria-describedby="ContactForm-message-error" {% endif %}>
             {{- form.body -}}
           </textarea>
           <label aria-required="true" class="form__label field__label" for="ContactForm-body">{{ 'templates.contact.form.message' | t }}</label>
