--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -16,7 +16,7 @@
   /* 2 */
   border-style: solid;
   /* 2 */
-  border-color: currentColor;
+  border-color: #e5e7eb;
   /* 2 */
 }
 
@@ -606,11 +606,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .italic {
   font-style: italic;
-}
-
-.text-default {
-  --tw-text-opacity: 1;
-  color: rgb(80 80 80 / var(--tw-text-opacity));
 }
 
 .outline {
