--- a/assets/base.css
+++ b/assets/base.css
@@ -1,5 +1,7 @@
 /* Color custom properties */
-
+* {
+  -webkit-font-smoothing: antialiased
+}
 
 .color-background-1 {
   --color-foreground: var(--color-base-text);
@@ -289,7 +291,7 @@ html.no-js .no-js-hidden {
   z-index: 0;
 }
 
-.section + .section {
+/* .section + .section {
   margin-top: var(--spacing-sections-mobile);
 }
 
@@ -297,7 +299,7 @@ html.no-js .no-js-hidden {
   .section + .section {
     margin-top: var(--spacing-sections-desktop);
   }
-}
+} */
 
 .element-margin-top {
   margin-top: 5rem;
@@ -2788,7 +2790,7 @@ details-disclosure > details {
 
 .content-container {
   border-radius: var(--text-boxes-radius);
-  border: var(--text-boxes-border-width) solid rgba(var(--color-foreground), var(--text-boxes-border-opacity));
+  border-width: var(--text-boxes-border-width);
   position: relative;
 }
 
