--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -55,7 +55,7 @@
         --font-heading-family: {{ settings.type_header_font.family }}, {{ settings.type_header_font.fallback_families }};
         --font-heading-style: {{ settings.type_header_font.style }};
         --font-heading-weight: {{ settings.type_header_font.weight }};
-
+        
         --font-body-scale: {{ settings.body_scale | divided_by: 100.0 }};
         --font-heading-scale: {{ settings.heading_scale | times: 1.0 | divided_by: settings.body_scale }};
 
@@ -65,6 +65,8 @@
         --color-neutral-background-button: {{ settings.colors_neutral_background_button.red }}, {{ settings.colors_neutral_background_button.green }}, {{ settings.colors_neutral_background_button.blue }};
         --color-neutral-text-button: {{ settings.colors_text_neutral_button.red }}, {{ settings.colors_text_neutral_button.green }}, {{ settings.colors_text_neutral_button.blue }};
         --color-text-default: {{ settings.colors_text_default.red }}, {{ settings.colors_text_default.green }}, {{ settings.colors_text_default.blue }};
+        --color-neutral-gradient: {{ settings.colors_neutral_gradient.red }}, {{ settings.colors_neutral_gradient.green }}, {{ settings.colors_neutral_gradient.blue }};
+        --color-base-text-boxes-border: {{ settings.colors_base_text_boxes_border.red }}, {{ settings.colors_base_text_boxes_border.green }}, {{ settings.colors_base_text_boxes_border.blue }};
 
         --color-base-text: {{ settings.colors_text.red }}, {{ settings.colors_text.green }}, {{ settings.colors_text.blue }};
         --color-shadow: {{ settings.colors_text.red }}, {{ settings.colors_text.green }}, {{ settings.colors_text.blue }};
