--- a/sections/about-page.liquid
+++ b/sections/about-page.liquid
@@ -1,4 +1,5 @@
-{{ 'about-page.css' | asset_url | stylesheet_tag }} {%- style -%}
+{{ 'about-page.css' | asset_url | stylesheet_tag }}
+{%- style -%}
 
 .section-{{section.id}}{
   <!-- display: grid; -->
@@ -17,36 +18,20 @@
 
 {%- endstyle -%}
 <div>
-  <div
-    before=""
-    class="bg-no-repeat flex flex-col justify-center items-center text-logo bg-cover
-      text-6xl"
-    style="background: url({{section.settings.image|image_url}}) no-repeat top center,
-      #6DB3F2; background-size: cover; height: 300px">
-    <p class="font-extralight">La cave des copains</p>
-    <p class="font-light">La cave des copains</p>
-    <p class="font-medium">La cave des copains</p>
-    <p class="font-bold">La cave des copains</p>
-    <p class="font-extrabold">La cave des copains</p>
-  </div>
-
-  <div class="color-{{section.settings.color_scheme }} container mx-auto px-10 my-20 md:px-32
-      md:my-28 lg:px-0">
-    <div class="border-logo flex flex-col md:flex-col lg:flex-row content-container">
-      <img class="content-image" srcset="{%- if section.settings.image.width >= 375 -%}{{ section.settings.image | image_url: width: 375 }} 375w,{%- endif -%} {%- if section.settings.image.width >= 750 -%}{{ section.settings.image | image_url: width: 750 }} 750w,{%- endif -%} {%- if section.settings.image.width >= 1100 -%}{{ section.settings.image | image_url: width: 1100 }} 1100w,{%- endif -%} {%- if section.settings.image.width >= 1500 -%}{{ section.settings.image | image_url: width: 1500 }} 1500w,{%- endif -%} {%- if section.settings.image.width >= 1780 -%}{{ section.settings.image | image_url: width: 1780 }} 1780w,{%- endif -%} {%- if section.settings.image.width >= 2000 -%}{{ section.settings.image | image_url: width: 2000 }} 2000w,{%- endif -%} {%- if section.settings.image.width >= 3000 -%}{{ section.settings.image | image_url: width: 3000 }} 3000w,{%- endif -%} {%- if section.settings.image.width >= 3840 -%}{{ section.settings.image | image_url: width: 3840 }} 3840w,{%- endif -%} {{ section.settings.image | image_url }} {{ section.settings.image.width }}w" sizes="100vw" src="{{ section.settings.image | image_url: width: 1500 }}" loading="lazy" alt="{{ section.settings.image.alt | escape }}" width="{{ section.settings.image.width }}" height="{{ section.settings.image.width | divided_by: section.settings.image.aspect_ratio }}">
-
-      <div class="py-10 px-12 md:py-20 md:px-24">
-        <h1 class="text-4xl mb-12">{{ section.settings.title }}
-        Le concept Cavamie</h1>
-        <p class="font-medium text-xl">{{ section.settings.content }}Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidun t ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidun t ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd</p>
-      </div>
-    </div>
+  <div before="" class="bg-no-repeat flex flex-col justify-center items-center bg-cover
+          text-3xl phone:text-5xl tablet:text-6xl" style="background: url({{section.settings.image|image_url}}) no-repeat top center,
+            #6DB3F2; background-size: cover; height: 300px; color: {{section.settings.text_color}};">
+    <p class="font-extralight">{{ section.settings.heading_text }}</p>
+    <p class="font-light">{{ section.settings.heading_text }}</p>
+    <p class="font-medium" >{{ section.settings.heading_text }}</p>
+    <p class="font-bold" >{{ section.settings.heading_text }}</p>
+    <p class="font-extrabold" >{{ section.settings.heading_text }}</p>
   </div>
 </div>
 
 {% schema %}
 {
-  "name": "Contenu",
+  "name": "Header",
   "tag": "section",
   "class": "section",
   "settings": [
@@ -57,148 +42,16 @@
     },
     {
       "type": "text",
-      "id": "heading",
-      "default": "Nous contacter",
-      "label": "Titre de la page"
+      "id": "heading_text",
+      "default": "La cave des copains",
+      "label": "Texte"
     },
     {
-      "type": "select",
-      "id": "heading_size",
-      "options": [
-        {
-          "value": "h4",
-          "label": "Très très petit (h4)"
-        },
-        {
-          "value": "h3",
-          "label": "Très petit (h3)"
-        },
-        {
-          "value": "h2",
-          "label": "t:sections.all.heading_size.options__1.label"
-        },
-        {
-          "value": "h1",
-          "label": "t:sections.all.heading_size.options__2.label"
-        },
-        {
-          "value": "h0",
-          "label": "t:sections.all.heading_size.options__3.label"
-        }
-      ],
-      "default": "h1",
-      "label": "t:sections.all.heading_size.label"
-    },
-    {
-      "type": "text",
-      "id": "subheading",
-      "default": "Envie de nous écrire ou de nous soumettre une idée ?",
-      "label": "Sous titre de la page"
-    },
-    {
-      "type": "select",
-      "id": "subheading_size",
-      "options": [
-        {
-          "value": "h4",
-          "label": "Très très petit (h4)"
-        },
-        {
-          "value": "h3",
-          "label": "Très petit (h3)"
-        },
-        {
-          "value": "h2",
-          "label": "t:sections.all.subheading_size.options__1.label"
-        },
-        {
-          "value": "h1",
-          "label": "t:sections.all.subheading_size.options__2.label"
-        },
-        {
-          "value": "h0",
-          "label": "t:sections.all.subheading_size.options__3.label"
-        }
-      ],
-      "default": "h1",
-      "label": "t:sections.all.subheading_size.label"
-    },
-    {
-      "type": "select",
-      "id": "color_scheme",
-      "options": [
-        {
-          "value": "accent-1",
-          "label": "t:sections.all.colors.accent_1.label"
-        },
-        {
-          "value": "accent-2",
-          "label": "t:sections.all.colors.accent_2.label"
-        },
-        {
-          "value": "background-1",
-          "label": "t:sections.all.colors.background_1.label"
-        },
-        {
-          "value": "background-2",
-          "label": "t:sections.all.colors.background_2.label"
-        },
-        {
-          "value": "inverse",
-          "label": "t:sections.all.colors.inverse.label"
-        },
-        {
-          "value": "neutral",
-          "label": "t:sections.all.colors.neutral.label"
-        }
-      ],
-      "default": "background-1",
-      "label": "t:sections.all.colors.label"
-    },
-    {
-      "type": "text",
-      "id": "mandatory_field_text",
-      "default": "* champs obligatoires",
-      "label": "t:sections.contact-form.mandatory_field_text.label"
-    },
-    {
-      "type": "header",
-      "content": "t:sections.contact-form.write_us.header_label"
-    },
-    {
-      "type": "text",
-      "id": "write_us",
-      "label": "t:sections.contact-form.write_us.text_label"
-    },
-    {
-      "type": "header",
-      "content": "t:sections.all.padding.section_padding_heading"
-    },
-    
-    {
-      "type": "range",
-      "id": "padding_top",
-      "min": 0,
-      "max": 100,
-      "step": 4,
-      "unit": "px",
-      "label": "t:sections.all.padding.padding_top",
-      "default": 36
-    },
-    {
-      "type": "range",
-      "id": "padding_bottom",
-      "min": 0,
-      "max": 100,
-      "step": 4,
-      "unit": "px",
-      "label": "t:sections.all.padding.padding_bottom",
-      "default": 36
-    }
-  ],
-  "presets": [
-    {
-      "name": "t:sections.contact-form.presets.name"
+      "type": "color",
+      "id": "text_color",
+      "default": "#ff2949",
+      "label": "Couleur du texte"
     }
   ]
-} {% endschema %}
+}
+{% endschema %}
