--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -37,7 +37,8 @@
 @media screen and (max-width: 749px) {
   .banner--small.banner--mobile-bottom:not(.banner--adapt) .banner__media,
   .banner--small.banner--stacked:not(.banner--mobile-bottom):not(.banner--adapt) > .banner__media {
-    height: 28rem;
+    /* height: 28rem; */
+    display: none;
   }
 
   .banner--medium.banner--mobile-bottom:not(.banner--adapt) .banner__media,
@@ -225,7 +226,7 @@
   }
 
   .banner::before {
-    display: none !important;
+    display: none;
   }
 
   .banner--stacked .banner__media-image-half {
@@ -234,7 +235,6 @@
 }
 
 .banner__content {
-  padding: 0;
   display: flex;
   position: relative;
   width: 100%;
@@ -323,7 +323,7 @@
     --color-button-text: 0, 0, 0;
     max-width: 89rem;
     border: none;
-    border-radius: 0;
+    border-radius: var(--text-boxes-radius);
     box-shadow: none;
   }
 
@@ -365,6 +365,10 @@
   .banner__box > * + .banner__text {
     margin-top: 2rem;
   }
+}
+
+.banner__box > * + .banner__text.body {
+  line-height: normal;
 }
 
 .banner__box > * + * {
