--- a/sections/slideshow.liquid
+++ b/sections/slideshow.liquid
@@ -80,6 +80,18 @@
         #Slide-{{ section.id }}-{{ forloop.index }} .banner__media::after {
           opacity: {{ block.settings.image_overlay_opacity | divided_by: 100.0 }};
         }
+
+        #Slide-{{ section.id }}-{{ forloop.index }} .content-container {
+          border-width: 0;
+        }
+        #Slide-{{ section.id }}-{{ forloop.index }} .banner__box > .banner__heading {
+          color: {{ block.settings.title_color }};
+        }
+
+        /* custom bold richtext color */
+        #Slide-{{ section.id }}-{{ forloop.index }} .banner__text strong {
+          color: {{ block.settings.strong_color }};
+        }
       </style>
       <div class="slideshow__slide grid__item grid--1-col slider__slide"
         id="Slide-{{ section.id }}-{{ forloop.index }}"
@@ -120,7 +132,8 @@
             {%- endif -%}
             {%- if block.settings.subheading != blank -%}
               <div class="banner__text" {{ block.shopify_attributes }}>
-                <span>{{ block.settings.subheading | escape }}</span>
+                <!-- <span>{{ block.settings.subheading | escape }}</span> -->
+                {{ block.settings.subheading }}
               </div>
             {%- endif -%}
             {%- if block.settings.button_label != blank -%}
@@ -302,9 +315,29 @@
           "label": "t:sections.slideshow.blocks.slide.settings.heading.label"
         },
         {
+          "type": "color",
+          "id": "title_color",
+          "default": "#ff2949",
+          "label": "Couleur du titre"
+        },
+        {
+          "type": "color",
+          "id": "strong_color",
+          "default": "#ff2949",
+          "label": "Couleur du gras"
+        },
+        {
           "type": "select",
           "id": "heading_size",
           "options": [
+            {
+              "value": "h4",
+              "label": "Très très petit (h4)"
+            },
+            {
+              "value": "h3",
+              "label": "Très petit (h3)"
+            },
             {
               "value": "h2",
               "label": "t:sections.all.heading_size.options__1.label"
@@ -322,10 +355,9 @@
           "label": "t:sections.all.heading_size.label"
         },
         {
-          "type": "text",
+          "type": "richtext",
           "id": "subheading",
-          "default": "Tell your brand's story through images",
-          "label": "t:sections.slideshow.blocks.slide.settings.subheading.label"
+          "label": "t:sections.collapsible_content.blocks.collapsible_row.settings.row_content.label"
         },
         {
           "type": "text",
@@ -449,6 +481,10 @@
             {
               "value": "inverse",
               "label": "t:sections.all.colors.inverse.label"
+            },
+            {
+              "value": "neutral",
+              "label": "t:sections.all.colors.neutral.label"
             }
           ],
           "default": "background-1",
