--- a/sections/about-page.liquid
+++ b/sections/about-page.liquid
@@ -1,20 +1,27 @@
 {{ 'about-page.css' | asset_url | stylesheet_tag }}
 {%- style -%}
 
+{% comment %}
 .section-{{section.id}}{
-  <!-- display: grid; -->
+  display: grid;
 }
-.section-{{section.id}}{
-  <!-- padding-top: {{section.settings.padding_top | times: 0.75 | round: 0}}px;
-  padding-bottom: {{section.settings.padding_bottom | times: 0.75 | round: 0}}px; -->
-}
+{% endcomment %}
 
+{% comment %}
+.section-{{section.id}}{
+  padding-top: {{section.settings.padding_top | times: 0.75 | round: 0}}px;
+  padding-bottom: {{section.settings.padding_bottom | times: 0.75 | round: 0}}px;
+}
+{% endcomment %}
+
+{% comment %}
 @media screen and(min-width: 750px) {
   .section-{{section.id}}{
-    <!-- padding-top: {{section.settings.padding_top}}px;
-    padding-bottom: {{section.settings.padding_bottom}}px; -->
+    padding-top: {{section.settings.padding_top}}px;
+    padding-bottom: {{section.settings.padding_bottom}}px;
   }
 }
+{% endcomment %}
 
 {%- endstyle -%}
 <div>
