--- a/sections/slideshow.liquid
+++ b/sections/slideshow.liquid
@@ -5,25 +5,26 @@
 
 {%- if section.settings.slide_height == 'adapt_image' and section.blocks.first.settings.image != blank -%}
   {%- style -%}
-  @media screen and (max-width: 749px) {
-    #Slider-{{ section.id }}::before,
-    #Slider-{{ section.id }} .media::before,
-    #Slider-{{ section.id }}:not(.banner--mobile-bottom) .banner__content::before {
-      padding-bottom: {{ 1 | divided_by: section.blocks.first.settings.image.aspect_ratio | times: 100 }}%;
-      content: '';
-      display: block;
-    }
-  }
 
-  @media screen and (min-width: 750px) {
-    #Slider-{{ section.id }}::before,
-    #Slider-{{ section.id }} .media::before {
-      padding-bottom: {{ 1 | divided_by: section.blocks.first.settings.image.aspect_ratio | times: 100 }}%;
-      content: '';
-      display: block;
-    }
+@media screen and(max-width: 749px) {
+  #Slider-{{section.id}}::before,
+  #Slider-{{section.id}}.media::before,
+  #Slider-{{section.id}}:not(.banner--mobile-bottom) .banner__content::before {
+    padding-bottom: {{1 | divided_by: section.blocks.first.settings.image.aspect_ratio | times: 100}}%;
+    content: '';
+    display: block;
   }
-  {%- endstyle -%}
+}
+
+@media screen and(min-width: 750px) {
+  #Slider-{{section.id}}: : before, #Slider-{{section.id}}.media::before {
+    padding-bottom: {{1 | divided_by: section.blocks.first.settings.image.aspect_ratio | times: 100}}%;
+    content: '';
+    display: block;
+  }
+}
+
+{%- endstyle -%}
 {%- endif -%}
 
 <slideshow-component class="slider-mobile-gutter{% if section.settings.layout == 'grid' %} page-width{% endif %}{% if section.settings.show_text_below %} mobile-text-below{% endif %}" role="region" aria-roledescription="{{ 'sections.slideshow.carousel' | t }}" aria-label="{{ section.settings.accessibility_info | escape }}">
@@ -132,7 +133,6 @@
             {%- endif -%}
             {%- if block.settings.subheading != blank -%}
               <div class="banner__text" {{ block.shopify_attributes }}>
-                <!-- <span>{{ block.settings.subheading | escape }}</span> -->
                 {{ block.settings.subheading }}
               </div>
             {%- endif -%}
