feat: collections cards

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -734,6 +734,10 @@
         {
           "value": "inverse",
           "label": "t:sections.all.colors.inverse.label"
+        },
+        {
+          "value": "neutral",
+          "label": "t:sections.all.colors.neutral.label"
         }
       ],
       "default": "background-1",
