--- a/assets/base.css
+++ b/assets/base.css
@@ -419,6 +419,8 @@ p {
   /* font-weight: var(--font-heading-weight); */
   letter-spacing: calc(var(--font-heading-scale) * 0.06rem);
   /* color: rgb(var(--color-foreground)); */
+  
+  /* color: rgb(var(--color-title)); TODO: make a global style*/ 
   line-height: calc(1 + 0.3 / max(1, var(--font-heading-scale)));
   word-break: break-word;
 }
