--- a/assets/section-multicolumn.css
+++ b/assets/section-multicolumn.css
@@ -1,3 +1,8 @@
+
+.multicolumn .grid--1-col-tablet-down .grid__item {
+  max-width: 220px;
+}
+
 .multicolumn .title {
   margin: 0;
 }
@@ -52,6 +57,11 @@
   padding: 0;
 }
 
+@media screen and (max-width: 949px) {
+  .multicolumn-list {
+    justify-content: center;
+  }
+}
 .multicolumn-list__item:only-child {
   max-width: 72rem;
 }
@@ -62,7 +72,7 @@
 
 .multicolumn:not(.background-none) .multicolumn-card {
   background: rgb(var(--color-background));
-  height: 100%;
+  height: 275px;
 }
 
 .multicolumn.background-primary .multicolumn-card {
