--- a/assets/base.css
+++ b/assets/base.css
@@ -124,6 +124,12 @@
   --color-button-text: var(--color-foreground);
 }
 
+.color-neutral .button--secondary {
+  --color-button-text: 0 0 0;
+  --color-button: 255, 255, 255;
+  --alpha-button-background: 1;
+}
+
 .button--tertiary {
   --color-button: var(--color-base-outline-button-labels);
   --color-button-text: var(--color-base-outline-button-labels);
@@ -258,7 +264,7 @@ html.no-js .no-js-hidden {
 
 @media screen and (min-width: 750px) {
   .page-width {
-    padding: 0 5rem;
+    /* padding: 0 5rem; */
   }
 
   .page-width--narrow {
@@ -934,8 +940,8 @@ summary::-webkit-details-marker {
 
 .title-wrapper--self-padded-tablet-down,
 .title-wrapper--self-padded-mobile {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+  /* padding-left: 1.5rem;
+  padding-right: 1.5rem; */
 }
 
 @media screen and (min-width: 750px) {
