--- a/assets/collage.css
+++ b/assets/collage.css
@@ -48,15 +48,37 @@
   .collage--mobile .collage__item--right:nth-child(3n) {
     grid-column: 1 / span 2;
   }
+
+  .card__inner {
+    max-height: 250px;
+  }
+
+  .collage__item--right:nth-child(3n) .card__inner,
+  .collage__item--left:nth-child(3n - 2) .card__inner {
+    max-height: 500px;
+  }
 }
 
+
+
 @media screen and (min-width: 750px) {
+
   .collage {
     grid-auto-flow: column;
     grid-column-gap: var(--grid-desktop-horizontal-spacing);
     grid-row-gap: var(--grid-desktop-vertical-spacing);
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
+
+  .card__inner {
+    max-height: 360px;
+  }
+
+  .collage__item--right:nth-child(3n) .card__inner,
+  .collage__item--left:nth-child(3n - 2) .card__inner {
+    max-height: 800px;
+  }
+
 
   .collage__item--left:nth-child(3n - 2) {
     grid-column: 1 / span 2;
@@ -98,12 +120,18 @@
     grid-row: span 2;
   }
 
+
+
   .collage__item--collection:only-child,
   .collage__item--product:only-child {
     justify-self: center;
     max-width: 73rem;
     width: 100%;
   }
+}
+
+@media screen and (max-width: 749px) {
+
 }
 
 .collage-card {
